--- a/MILESTONE 1/index.html
+++ b/MILESTONE 1/index.html
@@ -20,7 +20,28 @@ visualizzare nome e immagine di ogni contatto -->
 <body>
     
     <div id="root">
+        <!-- container background TOP -->
+        <div class="container-background-TOP"></div>
 
+        <!-- app wrapper -->
+        <div class="app-wrapper">
+
+            <!-- HEADER -->
+            <header>
+
+            </header>
+            <!-- END HEADER -->
+
+            <!-- MAIN -->
+            <main>
+
+            </main>
+            <!-- END MAIN -->
+
+        </div>
+
+        <!-- container background BOTTOM -->
+        <div class="container-background-BOTTOM"></div>
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
