--- a/MILESTONE 1/index.html
+++ b/MILESTONE 1/index.html
@@ -28,13 +28,25 @@ visualizzare nome e immagine di ogni contatto -->
 
             <!-- HEADER -->
             <header>
+                <!-- COL -->
+                <div class="col col-sx">
 
+                </div>
+                <!-- COL -->
+                <div class="col col-dx">
+
+                </div>
             </header>
             <!-- END HEADER -->
 
             <!-- MAIN -->
             <main>
+                <div class="col col-sx">
 
+                </div>
+                <div class="col col-dx">
+
+                </div>
             </main>
             <!-- END MAIN -->
 
