--- a/MILESTONE 1/index.html
+++ b/MILESTONE 1/index.html
@@ -103,11 +103,44 @@ visualizzare nome e immagine di ogni contatto -->
                             <span>Cerca o inizia una nuova chat</span>
                         </div>
                     </div>
+
+                    <!-- CONTACT -->
+                    <div class="contact-container vertical-center">
+                        <div id="contact" class="vertical-center">
+                            <div class="circle-profile">
+                                <img src="../boolzapp-assets/img/avatar_1.jpg" alt="">
+                            </div>
+                            <!-- user name -->
+                            <h3>Nome Utente</h3>
+                        </div>
+                    </div>
+
+                    <!-- CONTACT -->
+                    <div class="contact-container vertical-center">
+                        <div id="contact" class="vertical-center">
+                            <div class="circle-profile">
+                                <img src="../boolzapp-assets/img/avatar_1.jpg" alt="">
+                            </div>
+                            <!-- user name -->
+                            <h3>Nome Utente</h3>
+                        </div>
+                    </div>
+
                 </div>
 
                 <!-- COL DX -->
                 <div class="col col-dx">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam sit dolores, vitae nesciunt molestiae voluptates maiores sint minima aut cum laboriosam, iure provident id ipsum asperiores vero. Nobis, error.
+
+                    <!-- mex container -->
+                    <div id="mex-container">
+
+                    </div>
+
+                    <!-- mex bar -->
+                    <div id="mex-bar">
+                        mex bar
+                    </div>
+
                 </div>
             </main>
             <!-- END MAIN -->
