--- a/MILESTONE 1/index.html
+++ b/MILESTONE 1/index.html
@@ -103,7 +103,7 @@ visualizzare nome e immagine di ogni contatto -->
                             <span>Cerca o inizia una nuova chat</span>
                         </div>
                     </div>
-
+<!-- ---------------------------------------------------------------------------------- -->
                     <!-- CONTACT -->
                     <div class="contact-container vertical-center">
                         <div id="contact" class="vertical-center">
@@ -114,17 +114,7 @@ visualizzare nome e immagine di ogni contatto -->
                             <h3>Nome Utente</h3>
                         </div>
                     </div>
-
-                    <!-- CONTACT -->
-                    <div class="contact-container vertical-center">
-                        <div id="contact" class="vertical-center">
-                            <div class="circle-profile">
-                                <img src="../boolzapp-assets/img/avatar_1.jpg" alt="">
-                            </div>
-                            <!-- user name -->
-                            <h3>Nome Utente</h3>
-                        </div>
-                    </div>
+<!-- ---------------------------------------------------------------------------------- -->
 
                 </div>
 
@@ -137,8 +127,19 @@ visualizzare nome e immagine di ogni contatto -->
                     </div>
 
                     <!-- mex bar -->
-                    <div id="mex-bar">
-                        mex bar
+                    <div id="mex-bar" class="vertical-center">
+                        <!-- emoticon -->
+                        <div id="emoticon">
+                            <i class="far fa-smile"></i>
+                        </div>
+                        <!-- input mex -->
+                        <div id="input-mex">
+                            <input type="text" placeholder="scrivi un messaggio">
+                        </div>
+                        <!-- microphone -->
+                        <div id="audio">
+                            <i class="fas fa-microphone"></i>
+                        </div>
                     </div>
 
                 </div>
