--- a/MILESTONE 1/index.html
+++ b/MILESTONE 1/index.html
@@ -39,7 +39,7 @@ visualizzare nome e immagine di ogni contatto -->
                     <!-- user profile -->
                     <div id="user-profile" class="vertical-center">
                         <div class="circle-profile">
-                            <img src="../boolzapp-assets/img/avatar_1.jpg" alt="">
+                            <img src="../boolzapp-assets/img/avatar_io.jpg" alt="">
                         </div>
                         <!-- user name -->
                         <h3>Nome Utente</h3>
@@ -56,7 +56,7 @@ visualizzare nome e immagine di ogni contatto -->
                 <!-- COL DX-->
                 <div class="col col-dx">
 
-                    <!-- current profile -->
+                    <!-- single profile -->
                     <div id="current-profile" class="vertical-center">
                         <div class="circle-profile">
                             <img src="../boolzapp-assets/img/avatar_1.jpg" alt="">
@@ -105,13 +105,13 @@ visualizzare nome e immagine di ogni contatto -->
                     </div>
 <!-- ---------------------------------------------------------------------------------- -->
                     <!-- CONTACT -->
-                    <div class="contact-container vertical-center">
+                    <div v-for="contact in contacts" class="contact-container vertical-center">
                         <div id="contact" class="vertical-center">
                             <div class="circle-profile">
-                                <img src="../boolzapp-assets/img/avatar_1.jpg" alt="">
+                                <img :src="'../boolzapp-assets/img/avatar' + contact.avatar + '.jpg'" alt="">
                             </div>
                             <!-- user name -->
-                            <h3>Nome Utente</h3>
+                            <h3>{{contact.name}}</h3>
                         </div>
                     </div>
 <!-- ---------------------------------------------------------------------------------- -->
@@ -122,8 +122,15 @@ visualizzare nome e immagine di ogni contatto -->
                 <div class="col col-dx">
 
                     <!-- mex container -->
-                    <div id="mex-container">
-
+                    <div id="mex-wrapper">
+                        <div class="mex-container">
+                            <div class="recived">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil</p>
+                            </div>
+                            <div class="send">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolores, quas voluptatem, deleniti autem odit ipsa, assumenda earum quibusdam dolor molestiae? Atque ipsam repudiandae sit! Quis nesciunt nulla id quaerat.
+                            </div>
+                        </div>
                     </div>
 
                     <!-- mex bar -->
