day.js POST CORREZIONE

--- a/MILESTONE 3/index.html
+++ b/MILESTONE 3/index.html
@@ -167,7 +167,8 @@ un “ok” come risposta, che apparirà dopo 1 secondo. -->
         </div>
 
     </div>
-
+    
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
