--- a/MILESTONE 5/index.html
+++ b/MILESTONE 5/index.html
@@ -148,7 +148,8 @@ Visualizzazione ora e ultimo messaggio inviato/ricevuto nella lista dei contatti
                             </div>
                             
                             <!-- menu delete -->
-                            <div class="menu-mex" >
+                            <div class="menu-mex" 
+                            :class= "{'active-menu-mex' : index === activeMex}">
                                 <div>
                                     Messase info
                                 </div>
