--- a/MILESTONE 5/index.html
+++ b/MILESTONE 5/index.html
@@ -153,7 +153,8 @@ Visualizzazione ora e ultimo messaggio inviato/ricevuto nella lista dei contatti
                                 <div>
                                     Messase info
                                 </div>
-                                <div id="delete-mex">
+                                <div id="delete-mex"
+                                @click="deleteMex(index)">
                                     Delete message
                                 </div>
                             </div>
