--- a/MILESTONE 5/index.html
+++ b/MILESTONE 5/index.html
@@ -11,7 +11,8 @@ Visualizzazione ora e ultimo messaggio inviato/ricevuto nella lista dei contatti
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- framework -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script> -->
     <!-- end framework -->
     <link rel="stylesheet" href="css/style.css">
     <!-- font awesome -->
